add BD Turso .env example

--- a/.env.example
+++ b/.env.example
@@ -13,3 +13,7 @@ GITHUB_CLIENT_SECRET=your_github_client_secret
 
 # URL de devolución de llamada para la autenticación de GitHub
 GITHUB_CALLBACK_URL=https://your-app-url/auth/github/callback
+
+# Turso credentials Database
+TURSO_DATABASE_URL=https://your-turso-database-url.turso.io
+TURSO_AUTH_TOKEN=yout_turso_auth_token
