--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@libsql/client": "^0.6.0",
     "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "express-handlebars": "^7.1.2",
     "jsonwebtoken": "^9.0.2",
