--- a/package.json
+++ b/package.json
@@ -17,14 +17,9 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "express-handlebars": "^7.1.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.3.2",
-    "mongoose-paginate-v2": "^1.8.0",
     "passport": "^0.7.0",
-    "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1",
-    "passport-local": "^1.0.0",
-    "socket.io": "^4.7.5"
+    "passport-local": "^1.0.0"
   }
 }
